Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125416

SwipeView shows all elements at once if it is 0x0 in size

XMLWordPrintable

    • iOS/tvOS/watchOS, Linux/Wayland
    • 477c15def (dev), 0b6fd253e (6.8), add073131 (6.7), 7f41a1315 (tqtc/lts-6.5)

      To reproduce, run attached example. It shows all 12345 labels even though it should only be showing 1.

      Setting size for it makes it behave normally.

      import QtQuick.Window
      import QtQuick.Controls.Basic
      import QtQuick
      
      Window {
          visible: true
          width: 800
          height: 600
      
          Item {
              id: root
              SwipeView {
                  anchors.fill: parent
      
                  Text {
                      text: "1        "
                      font.pointSize: 24
                  }
                  Text {
                      text: "  2      "
                      font.pointSize: 24
                  }
                  Text {
                      text: "    3    "
                      font.pointSize: 24
                  }
                  Text {
                      text: "      4  "
                      font.pointSize: 24
                  }
                  Text {
                      text: "        5"
                      font.pointSize: 24
                  }
              }
          }
      }
      

        1. qtbug125416.tar.gz
          66 kB
          Joni Poikelin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            poikelin Joni Poikelin
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: