tests/auto/qmltest/listview/tst_listview.qml
@@ -38,12 +38,16 @@ Item {
 
     ListView {
         id: modelchange
+        width: 100
+        height: 100
         model: firstmodel
         delegate: Text { text: model.name }
     }
 
     ListView {
         id: modelalter
+        width: 100
+        height: 100
         model: altermodel
         delegate: Text { text: model.name }
     }
